--- a/Style.css
+++ b/Style.css
@@ -1,33 +1,45 @@
+/* Regular Typeface */
 @font-face {
-    font-family: 'KiaSignatureFixOTFRegular';
+    font-family: 'KiaSignatureFixOTF';
     src: url('https://raw.githubusercontent.com/sfhe-skps/K_Sig_Fonts/main/KiaSignatureFixOTFRegular.otf') format('opentype');
     font-style: normal;
+    font-weight: 400; /* Standard weight for regular */
+    font-display: swap;
+}
+
+/* Bold Typeface */
+@font-face {
+    font-family: 'KiaSignatureFixOTF';
+    src: url('https://raw.githubusercontent.com/sfhe-skps/K_Sig_Fonts/main/KiaSignatureFixOTFBold.otf') format('opentype');
+    font-style: normal;
+    font-weight: 700; /* Bold weight */
+    font-display: swap;
+}
+
+/* Light Typeface */
+@font-face {
+    font-family: 'KiaSignatureFixOTF';
+    src: url('https://raw.githubusercontent.com/sfhe-skps/K_Sig_Fonts/main/KiaSignatureFixOTFLight.otf') format('opentype');
+    font-style: normal;
+    font-weight: 300; /* Light weight */
+    font-display: swap;
+}
+
+/* Apply Regular Font to All Body Text */
+body {
+    font-family: 'KiaSignatureFixOTF', Tahoma, sans-serif !important;
     font-weight: 400;
 }
 
-@font-face {
-    font-family: 'KiaSignatureFixOTFBold';
-    src: url('https://raw.githubusercontent.com/sfhe-skps/K_Sig_Fonts/main/KiaSignatureFixOTFBold.otf') format('opentype');
-    font-style: normal;
+/* Apply Bold Font to Headings and Emphasized Text */
+.Skin .QuestionText, 
+.Skin .QuestionText strong {
+    font-family: 'KiaSignatureFixOTF', Tahoma, sans-serif !important;
     font-weight: 700;
 }
 
-@font-face {
-    font-family: 'KiaSignatureFixOTFLight';
-    src: url('https://raw.githubusercontent.com/sfhe-skps/K_Sig_Fonts/main/KiaSignatureFixOTFLight.otf') format('opentype');
-    font-style: normal;
-    font-weight: 300;
-}
-
-body {
-    font-family: 'KiaSignatureFixOTFRegular', Tahoma, sans-serif !important;
-}
-
-.Skin .QuestionText, 
-.Skin .QuestionText strong {
-    font-family: 'KiaSignatureFixOTFBold', Tahoma, sans-serif !important;
-}
-
+/* Apply Light Font to Subtext */
 .Skin .SubText {
-    font-family: 'KiaSignatureFixOTFLight', Tahoma, sans-serif !important;
+    font-family: 'KiaSignatureFixOTF', Tahoma, sans-serif !important;
+    font-weight: 300;
 }
